# Serializer

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp
Serializer/: CMakeLists.txt
doc/: dynser_config_schema.json
src/: CMakeLists.txt  main.cpp
src/dynser/: CMakeLists.txt  dynser.h
src/dynser/config/: config.cpp  config.h  defaults.h  keywords.h  structures.cpp  structures.h
src/dynser/config/regex/: from_string.cpp  from_string.h  structures.cpp  structures.h  to_string.cpp  to_string.h
src/dynser/dynser/: dynser.cpp  dynser.h
src/dynser/regex/: from_string.cpp  from_string.h  structures.cpp  structures.h  to_string.cpp  to_string.h
src/dynser/structs/: context.hpp  fields.hpp  properties.cpp  properties.h  properties.hpp
src/dynser/util/: mapper_helpers.hpp  prefix.hpp  visit.hpp
src/serializer/: CMakeLists.txt  serializer.h
src/serializer/structs/: fields.hpp  properties.hpp
src/serializer/utils/: collection_print.hpp
src/util/: lua_manual_debug.hpp  misc.hpp
test/: CMakeLists.txt
test/benchmark/: deserialize.hpp  serialize.hpp  tests.cpp
test/benchmark/configs/: serialize.yaml
test/cmake/: process_configs.cmake
test/configs/: benchmark.yaml  benchmark_serialize.yaml  branched.yaml  continual.yaml  empty.yaml  invalid_regex.yaml  no_value_error_case.yaml  overlapping_properties.yaml  recurrent.yaml  recursive.yaml  regex.yaml  throw_lua_errors.yaml  variant_struct.yaml
test/deserialize/: common.hpp  continual.hpp  recurrent.hpp  recursive.hpp  regex.hpp  tests.cpp
test/internal/: dyn_regex.hpp  regex_parse.hpp  regex_to_string.hpp  tests.cpp
test/serialize/: branched.hpp  common.hpp  continual.cpp  continual.hpp  error_cases.hpp  printer.hpp  recurrent.hpp  recursive.hpp  regex.hpp  tests.cpp  throw_lua_errors.hpp
test/serialize/configs/: branched.yaml  continual.yaml  recurrent.yaml  recursive.yaml  regex.yaml  throw_lua_errors.yaml
test/util/: printer.hpp  util_common.hpp
yaml/: example1.yaml  example2.yaml  prototype.yaml  schema_1.json  schema_2.json
